# OptimiseCuraProfiles

./: .gitignore  CMakeLists.txt  LICENSE  README.md  optimise.py
cmake/: FindPython.cmake
tests/: test_optimise.py  tests.py
tests/test_data/: children.def.json  colliding_settings_overrides.def.json  just_overrides.def.json  just_setting_defaults.def.json  just_setting_values.def.json  multiple.inst.cfg  settings_and_overrides.def.json  simple.inst.cfg  test_data.inst.cfg  weird_names.def.json
tests/test_data/simple_tree/subdirectory/: leaf1.inst.cfg  subdirectory.inst.cfg
tests/test_data/subdirectory/: leaf2.inst.cfg
